# golang-lexer

./: CMakeLists.txt  README.md  main.cpp
examples/: example.go  example1.go  nums.go
include/: IOUtils.hpp  Lexer.hpp  TokenUtils.hpp
src/: IOUtils.cpp  Lexer.cpp
